fix: added more data to user and improved rekognition
